--- a/src/app/music/music-player/music-player.component.html
+++ b/src/app/music/music-player/music-player.component.html
@@ -4,8 +4,8 @@
     <button ><i class="fa fa-step-backward"></i></button>
   </div>
   <div class="player_main">
-    <button><i class="fa fa-play"></i></button>
-    <!-- <button><i class="fa fa-pause"></i></button> -->
+    <button (click)="showPause(pause,play)" #play><i class="fa fa-play"></i></button>
+    <button [hidden]="true" (click)="showPlay(pause,play)" #pause><i class="fa fa-pause"></i></button>
     <button><i class="fa fa-stop"></i></button>
     <button><i class="fa fa-random"></i></button>
   </div>
