--- a/src/app/music/music-player/music-player.component.html
+++ b/src/app/music/music-player/music-player.component.html
@@ -6,8 +6,9 @@
   <div class="player_main">
     <button (click)="showPause(pause,play)" #play><i class="fa fa-play"></i></button>
     <button [hidden]="true" (click)="showPlay(pause,play)" #pause><i class="fa fa-pause"></i></button>
-    <button><i class="fa fa-stop"></i></button>
+    <button (click)="showPlay(pause,play)"><i class="fa fa-stop"></i></button>
     <button><i class="fa fa-random"></i></button>
+    <button><i class="fa fa-volume-up"></i></button>
   </div>
   <div class="player_forward">
     <button><i class="fa fa-step-forward"></i></button>
