--- a/src/app/music/music-progress/music-progress.component.css
+++ b/src/app/music/music-progress/music-progress.component.css
@@ -10,10 +10,10 @@
     -webkit-appearance: none;
     appearance: none;
   
-    width: 50%;
+    width: 100%;
     height: 5px;
-    margin-left: 4px;
-    margin-right: 4px;
+    /* margin-left: 4px;
+    margin-right: 4px; */
   }
   
   .progress progress[value]::-webkit-progress-bar {
